--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -3,7 +3,10 @@
     .wrapper {
         padding: 100px 0;
         position: relative;
-        z-index: 1;
+        z-index: 0;
+        @include res535 {
+            padding: 50px 0;
+        }
     }
     .about,
     .projects,
